--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^11.3.0",
+    "ffmpeg-binaries": "^3.2.2-3",
     "fs": "^0.0.1-security",
     "node-opus": "^0.2.7",
     "superagent": "^3.8.2",
