--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cleverbot.io": "^1.0.4",
     "discord.js": "^11.3.0",
     "ffmpeg-binaries": "^3.2.2-3",
     "fs": "^0.0.1-security",
