--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "ffmpeg-binaries": "^3.2.2-3",
     "fs": "^0.0.1-security",
     "node-opus": "^0.2.7",
+    "pg": "^7.4.1",
     "superagent": "^3.8.2",
-    "ytdl-core": "^0.20.1"
+    "ytdl-core": "^0.20.1", 
   },
   "devDependencies": {},
   "scripts": {
