--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node-opus": "^0.2.7",
     "pg": "^7.4.1",
     "superagent": "^3.8.2",
-    "ytdl-core": "^0.20.1", 
+    "ytdl-core": "^0.20.1"
   },
   "devDependencies": {},
   "scripts": {
