--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "node-opus": "^0.2.7",
     "pg": "^7.4.1",
     "superagent": "^3.8.2",
-    "wtf_wikipedia": "^2.6.1"
+    "wtf_wikipedia": "^2.6.1",
+    "ytdl-core": "^0.20.2"
   },
   "devDependencies": {},
   "scripts": {
     "start": "node ./bot/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "TheBeepMaster#0506",
+  "author": "Valatos_#0506",
   "license": "ISC"
 }
