--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-opus": "^0.2.7",
     "pg": "^7.4.1",
     "superagent": "^3.8.2",
+    "translate": "^1.0.2",
     "wtf_wikipedia": "^2.6.1",
     "ytdl-core": "^0.20.2"
   },
@@ -19,6 +20,6 @@
     "start": "node ./bot/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Valatos_#0506",
+  "author": "Valatos",
   "license": "ISC"
 }
