--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "cleverbot.io": "^1.0.4",
     "discord.js": "^11.3.0",
-    "ffmpeg-binaries": "^3.2.2-3",
+    "ffmpeg-binaries": "3.2.2-3",
     "fs": "^0.0.1-security",
     "node-opus": "^0.2.7",
     "pg": "^7.4.1",
